<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F0F0"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/titlePTId"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="#FDF7F7"
            android:ems="15"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/descrPTId"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:autofillHints=""
            android:background="#FDF7F7"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_note"
                android:textColor="#040E40"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="List of your notes"
            android:textColor="#2E0775"
            android:textSize="36sp"
            android:textStyle="normal" />

        <ListView
            android:id="@+id/lv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F3F2F2"
            android:iconifiedByDefault="false"
            android:minHeight="500dp"
            android:scrollbarSize="40dp"
            android:textSize="100sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>